--- a/.env
+++ b/.env
@@ -1,14 +1,12 @@
-MongoDB Connection String (replace with your actual Atlas URI)
 MONGO_URI="mongodb://localhost:27017/"
 
-Flask Secret Key for session management and JWT signing
 SECRET_KEY="a-very-secure-and-long-secret-key-that-you-should-change"
 
-Google Gemini API Key for the AI Chatbot
-GEMINI_API_KEY="AIzaSyB7VvloWYm4JwbP6rPaNhuW03RmpDCYHrk"
+GEMINI_API_KEY="AIzaSyA2eVYch6UY0vmSfEYojB5V7E21bRB3HxM"
 
-
-EMAIL_HOST="https://www.google.com/search?q=smtp.gmail.com"
+EMAIL_HOST="smtp.gmail.com" # CORRECTED: This should be the SMTP server address
 EMAIL_PORT=465 # Port 465 is for SSL
-EMAIL_USER="k.santhoshkumar165@gmail.com"
-EMAIL_PASS="adic mxjh mzmu jldt"
+EMAIL_USER="weblancepoy@gmail.com"
+EMAIL_PASS="lsqc goam ywco akod"
+EMAIL_SENDER="weblancepoy@gmail.com"
+EMAIL_PASSWORD="lsqc goam ywco akod"
