--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb://localhost:27017/"
+MONGO_URI="mongodb+srv://weblancepoy:9345269165@cluster0.aejiuez.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
 SECRET_KEY="a-very-secure-and-long-secret-key-that-you-should-change"
 
